--- a/sass/presets/_content.scss
+++ b/sass/presets/_content.scss
@@ -89,10 +89,11 @@ body {
 
 .ribbon {
     margin: 60px 0;
-    padding-bottom: 80px;
+    padding-bottom: 70px;
     position: relative;
     overflow: hidden;
     background: #077f42;
+    z-index: 999999999 !important;
 
     &:after{
     	content: " ";
@@ -112,11 +113,53 @@ body {
 }
 
 .card-desc{
-
+    position: relative;
+    text-align: center;
     h3{
     	color: #077f42;
     	font-size: 150%;
     	font-family: 'Lustria', serif;
+        text-align: center;
+        margin-top: 20px auto;
+        position: relative;
+
+        span{
+            z-index: 10;
+            position: relative;
+            padding-top: 20px;
+            display: block;
+        }
+    }
+
+    .button-row{
+        text-align: center;
+    }
+
+    img{
+        width: 100%;
+    }
+
+    i{
+            z-index: 8;
+            font-size: 50px;
+        &.fa{
+            position: absolute;
+            margin: 0 auto;
+            top: 0;
+            background: #fff;
+            left: 0;
+            right: 0;
+            top: -85px;
+            width: 100px;
+            height: 100px;
+            display: table;
+            border-radius: 500px;
+
+            &:before{
+                display: table-cell;
+                vertical-align: middle;
+            }
+        }
     }
 }
 .card{
