--- a/sass/presets/_menu.scss
+++ b/sass/presets/_menu.scss
@@ -11,28 +11,25 @@
 	z-index: 10;
 	opacity: 0;
 	display: none;
-	&:after{
-		content: " ";
-		background: rgba(34, 34, 34, 0.5);;
-		height: 100%;
-		width: 100%;
-		position: absolute;
-		top: 0;
-		right: 0;
-		left: 0;
-	}
+	overflow: auto;
 }
 
 .menu-wrap{
-	position: absolute;
+	background: rgba(34, 34, 34, 0.5);;
+	position: relative;
 	top: 0;
 	z-index: 12;
 	margin: 0 auto;
 	width: 100%;
+	display: table;
+	height: 100%;
+	overflow-y: scroll;
 	ul{
 		padding: 0;
 		width: 100%;
 		text-align: center;
+		display: table-cell;
+		vertical-align: middle;
 	}
 	li{
 		list-style: none;
@@ -51,7 +48,6 @@
 			&.logo-menu{
 				img{
 					width: 160px;
-					margin: 10% 0 0;
 				}
 			}
 		}
