Added missing pages

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,5 +9,6 @@
 		"presets/map",
 		"presets/tabs",
 		"presets/footer",
-		"presets/form";  
-   
+		"vendor/isotope/isotope",
+		"presets/form"; 
+     
