--- a/sass/presets/_accordion.scss
+++ b/sass/presets/_accordion.scss
@@ -3,6 +3,9 @@
   width: 100%;
 }
 
+.booking-form{
+  width: 100%;
+}
 
 .form-group {
   margin-bottom: 20px;
@@ -13,8 +16,8 @@ h2.heading {
   text-transform: uppercase;
   font-weight: 300;
   text-align: left;
-  color: #506982;
-  border-bottom: 1px solid #506982;
+  color: #013813;
+  border-bottom: 1px solid #013813;
   padding-bottom: 3px;
   margin-bottom: 20px;
 }
@@ -22,105 +25,124 @@ h2.heading {
 .controls {
   text-align: left;
   position: relative;
-}
-.controls input[type="text"],
-.controls input[type="email"],
-.controls input[type="number"],
-.controls input[type="date"],
-.controls input[type="tel"],
-.controls textarea,
-.controls button,
-.controls select {
-  padding: 12px;
-  font-size: 14px;
-  border: 1px solid #c6c6c6;
-  width: 100%;
-  margin-bottom: 18px;
-  color: #888;
-  font-family: 'Lato', 'sans-serif';
-  font-size: 16px;
-  font-weight: 300;
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  border-radius: 2px;
-  -moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-.controls input[type="text"]:focus, .controls input[type="text"]:hover,
-.controls input[type="email"]:focus,
-.controls input[type="email"]:hover,
-.controls input[type="number"]:focus,
-.controls input[type="number"]:hover,
-.controls input[type="date"]:focus,
-.controls input[type="date"]:hover,
-.controls input[type="tel"]:focus,
-.controls input[type="tel"]:hover,
-.controls textarea:focus,
-.controls textarea:hover,
-.controls button:focus,
-.controls button:hover,
-.controls select:focus,
-.controls select:hover {
-  outline: none;
-  border-color: #9FB1C1;
-}
-.controls input[type="text"]:focus + label, .controls input[type="text"]:hover + label,
-.controls input[type="email"]:focus + label,
-.controls input[type="email"]:hover + label,
-.controls input[type="number"]:focus + label,
-.controls input[type="number"]:hover + label,
-.controls input[type="date"]:focus + label,
-.controls input[type="date"]:hover + label,
-.controls input[type="tel"]:focus + label,
-.controls input[type="tel"]:hover + label,
-.controls textarea:focus + label,
-.controls textarea:hover + label,
-.controls button:focus + label,
-.controls button:hover + label,
-.controls select:focus + label,
-.controls select:hover + label {
-  color: #bdcc00;
-  cursor: text;
-}
-.controls .fa-sort {
-  position: absolute;
-  right: 10px;
-  top: 17px;
-  color: #999;
-}
-.controls select {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  cursor: pointer;
-}
-.controls label {
-  position: absolute;
-  left: 8px;
-  top: 10px;
-  width: 60%;
-  color: #999;
-  font-size: 16px;
-  display: inline-block;
-  padding: 0 10px;
-  font-weight: 400;
-  background-color: rgba(255, 255, 255, 0);
-  -moz-transition: color 0.3s, top 0.3s, background-color 0.8s;
-  -o-transition: color 0.3s, top 0.3s, background-color 0.8s;
-  -webkit-transition: color 0.3s, top 0.3s, background-color 0.8s;
-  transition: color 0.3s, top 0.3s, background-color 0.8s;
-  background-color: white;
-}
-.controls label.active {
-  top: -14px;
-  color: #555;
-  background-color: white;
-  width: auto;
-}
-.controls textarea {
-  resize: none;
-  height: 200px;
+
+  input[type="date"],
+  select{
+    height: 45px;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  input[type="number"],
+  input[type="date"],
+  input[type="tel"],
+  input[type="password"],
+  textarea,
+  button,
+  select {
+    padding: 12px;
+    font-size: 14px;
+    border: 1px solid #c6c6c6;
+    width: 100%;
+    margin-bottom: 18px;
+    color: #888;
+    font-family: 'Lato', 'sans-serif';
+    font-size: 16px;
+    font-weight: 300;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    -moz-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+  }
+
+  input[type="text"]:focus, .controls input[type="text"]:hover,
+  input[type="email"]:focus,
+  input[type="email"]:hover,
+  input[type="number"]:focus,
+  input[type="number"]:hover,
+  input[type="date"]:focus,
+  input[type="date"]:hover,
+  input[type="tel"]:focus,
+  input[type="tel"]:hover,
+  input[type="password"]:focus,
+  input[type="password"]:hover,
+  textarea:focus,
+  textarea:hover,
+  button:focus,
+  button:hover,
+  select:focus,
+  select:hover {
+    outline: none;
+    border-color: #9FB1C1;
+  } 
+
+  input[type="text"]:focus + label,
+  input[type="text"]:hover + label,
+  input[type="email"]:focus + label,
+  input[type="email"]:hover + label,
+  input[type="number"]:focus + label,
+  input[type="password"]:focus + label,
+  input[type="password"]:hover + label,
+  input[type="number"]:hover + label,
+  input[type="date"]:focus + label,
+  input[type="date"]:hover + label,
+  input[type="tel"]:focus + label,
+  input[type="tel"]:hover + label,
+  textarea:focus + label,
+  textarea:hover + label,
+  button:focus + label,
+  button:hover + label,
+  select:focus + label,
+  select:hover + label {
+    color: #077f42;
+    cursor: text;
+  }
+
+  .fa-sort {
+    position: absolute;
+    right: 10px;
+    top: 15px;
+    color: #999;
+  }
+
+  select {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    cursor: pointer;
+  }
+
+  label {
+    position: absolute;
+    left: 8px;
+    top: 10px;
+    width: 60%;
+    color: #999;
+    font-size: 16px;
+    display: inline-block;
+    padding: 0 10px;
+    font-weight: 400;
+    background-color: rgba(255, 255, 255, 0);
+    -moz-transition: color 0.3s, top 0.3s, background-color 0.8s;
+    -o-transition: color 0.3s, top 0.3s, background-color 0.8s;
+    -webkit-transition: color 0.3s, top 0.3s, background-color 0.8s;
+    transition: color 0.3s, top 0.3s, background-color 0.8s;
+    background-color: white;
+
+    &.active {
+      top: -14px;
+      color: #555;
+      background-color: white;
+      width: auto;
+    }
+  }
+
+  textarea {
+    resize: none;
+    height: 192px;
+  }
 }
 
 button {
@@ -130,9 +152,10 @@ button {
   color: #fff;
   padding: 12px 0;
   float: right;
-}
-button:hover {
-  background-color: #224c60;
+
+  &:hover {
+    background-color: #224c60;
+  }
 }
 
 .clear:after {
@@ -143,20 +166,22 @@ button:hover {
 
 .grid {
   background: white;
-}
-.grid:after {
-  /* Or @extend clearfix */
-  content: "";
-  display: table;
-  clear: both;
+
+  &:after {
+    /* Or @extend clearfix */
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  .info-text{
+    margin: 0 0 15px;
+  }
 }
 
 [class*='col-'] {
   float: left;
   padding-right: 10px;
-}
-.grid [class*='col-']:last-of-type {
-  padding-right: 0;
 }
 
 .col-2-3 {
@@ -175,8 +200,13 @@ button:hover {
   width: 25%;
 }
 
+.right-last{
+  padding-right:0;
+  float: right;
+}
+
 @media (max-width: 760px) {
-  .col-1-4-sm, .col-1-3, .col-2-3 {
+  .col-1-4-sm, .col-1-3, .col-2-3, .col-1-2 {
     width: 100%;
   }
 
@@ -184,6 +214,7 @@ button:hover {
     padding-right: 0px;
   }
 }
+
 .col-1-8 {
   width: 12.5%;
 }
