--- a/sass/presets/_header.scss
+++ b/sass/presets/_header.scss
@@ -70,6 +70,7 @@
               -webkit-transition: all 0.2s ease-in-out;
               -o-transition: all 0.2s ease-in-out;
               transition: all 0.2s ease-in-out;
+                  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.33);
             }
 
             span:first-child{
