--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 		"presets/content",
 		"presets/gallery",
 		"presets/map",
+		"presets/profile",
 		"presets/tabs",
 		"presets/footer",
 		"vendor/isotope/isotope",
